# fia-mcp-server

./: .gitignore  Dockerfile  README.md  build-and-push.sh  deploy-cloudrun.sh  docker-compose.yml  docker-run.sh  pyproject.toml  requirements.txt
src/: main.py
src/services/: axcelerate.py
src/test/: chat.py
